# pybrewer

./: README.md  pyproject.toml
pybrewer/: __main__.py  formula.py  package.py
pybrewer/templates/: formula.rb.j2  formula.txt
