[tool.poetry]
name = "pybrewer"
version = "0.1.0"
description = "Utility for generating homebrew formulas"
authors = ["Konstantin Zakharov <kszakharov@gmail.com>"]
license = "Unlicense"

[tool.poetry.dependencies]
python = "^3.9"
poetry = "^1.1.11"
requests = "^2.26.0"
Jinja2 = "^3.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
