[tool.poetry]
name = "pybrewer"
version = "0.1.0"
description = "Utility for generating homebrew formulas"
authors = ["Konstantin Zakharov <kszakharov@gmail.com>"]
license = "Unlicense"

[tool.poetry.scripts]
pybrewer = "pybrewer.__main__:main"

[tool.poetry.dependencies]
python = "^3.9"
poetry = "^1.2.2"
requests = "^2.26.0"
Jinja2 = "^3.0.2"
ttp = "^0.8.4"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
mypy = "^0.971"
black = "^22.6.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pybrewer.completions]
bash = "completions/bash/c2"
fish = "completions/fish/c2.fish"
zsh = "completions/zsh/_c2"

[tool.pybrewer.dependencies]
exlude = ["pywin32", "winsdk"]

[tool.pybrewer.git]
head = "git@ghe.cloud.croc.ru:pkulev/c2cli.git"
branch = "main"
